# fangaos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ROADMAP.md  TESTING.md  limine.conf
kernel/crates/fanga-kernel/: Cargo.toml
kernel/crates/fanga-kernel/src/: boot.rs  heap.rs  lib.rs  main.rs  memory_stats.rs  pmm.rs  syscall.rs  syscall_handlers.rs  vmm.rs
kernel/crates/fanga-kernel/src/elf/: loader.rs  mod.rs  parser.rs
kernel/crates/fanga-kernel/src/fs/: file_descriptor.rs  memfs.rs  mod.rs  path.rs  vfs.rs
kernel/crates/fanga-kernel/src/io/: console.rs  font.rs  framebuffer.rs  framebuffer_enhanced.rs  input.rs  keyboard_bridge.rs  keyboard_handler.rs  line_editor.rs  logger.rs  mod.rs  vt.rs
kernel/crates/fanga-kernel/src/memory/: addr.rs  cow.rs  debug.rs  demand_paging.rs  mmap.rs  mod.rs  protection.rs  regions.rs  stats.rs  swap.rs
kernel/crates/fanga-kernel/src/net/: arp.rs  dhcp.rs  ethernet.rs  ipv4.rs  mod.rs  socket.rs  tcp.rs  udp.rs
kernel/crates/fanga-kernel/src/numa/: allocator.rs  mod.rs  policy.rs  topology.rs
kernel/crates/fanga-kernel/src/power/: battery.rs  cpu.rs  device.rs  hibernate.rs  mod.rs  suspend.rs
kernel/crates/fanga-kernel/src/preempt/: counter.rs  mod.rs  points.rs  stats.rs
kernel/crates/fanga-kernel/src/profiling/: mod.rs  output.rs  pmu.rs  (+2 more)
kernel/crates/fanga-kernel/tests/: memory_integration.rs  network_integration.rs  process_integration.rs  shell_integration.rs  storage_integration.rs  syscall_integration.rs  vfs_integration.rs
(+120 files in other folders)
