[package]
name = "fanga-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fanga-kernel"
path = "src/main.rs"
required-features = ["kernel-bin"]

[features]
default = []
kernel-bin = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
fanga-arch-x86_64 = { path = "../fanga-arch-x86_64" }
limine = "0.5.0"
spin = "0.9"

[dev-dependencies]
spin = "0.9"
